--- a/L101/index.html
+++ b/L101/index.html
@@ -7,5 +7,10 @@
   </head>
   <body>
     <!-- page content -->
+    <p>გვერდის დასაწყიდი ...</p>
+      <script>
+        alert('უფრო რთულ რაღაცეებზე გადასვლის დროა!')
+      </script>
+      <p>... გვერდის დასასრული</p>
   </body>
 </html>
