--- a/L102/index.html
+++ b/L102/index.html
@@ -8,4 +8,6 @@
   <body>
     <!-- page content -->
   </body>
+  <script src="./welcome.js"></script>
+  <script src="./intro.js"></script>
 </html>
